--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["repl.it user <replituser@example.com>"]
 python = "^3.8"
 discord = "^1.0.1"
 replit = "^2.0.0"
+jsonpickle = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 
